--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.3
+  firebase_auth: ^5.1.4
+  firebase_core: ^3.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
