--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://ashgreninja:AGreninja@cluster0.ih3m1zb.mongodb.net/turfpro?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+EMAIL_USER=greninjaash449@gmail.com
+EMAIL_PASS=Aagt@123
