--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sportsconnect
+name: turfpro
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,8 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.3
-  firebase_auth: ^5.1.4
-  firebase_core: ^3.3.0
   qr_flutter: ^4.1.0
 
   # The following adds the Cupertino Icons font to your application.
