--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,10 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.2.3
   qr_flutter: ^4.1.0
-  image_picker: ^1.1.2
-  file_picker: ^8.1.2
-
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
+  url_launcher: ^6.3.1
+  share: ^2.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
